# fbench

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  Makefile  README.md  cleanup.py  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  example.ipynb  fBench-functions.ipynb  index.md
scripts/: cleanup.py  generate_readme_image.py
src/fbench/: __init__.py  core.py  function.py  structure.py  validation.py  visualization.py  viz.py
tests/: test_core.py  test_fbench.py  test_function.py  test_validation.py  test_visualization.py  test_viz.py
